use larger thumbnails, fix aligning

--- a/modules/gallery_masonry/media/css/style.css
+++ b/modules/gallery_masonry/media/css/style.css
@@ -26,10 +26,10 @@ body { background: url("../img/knitetgantt.png") #CCC; color: #FFF; font-family:
 a.box { background: #000; color: #FFF; float: left; margin: 10px; padding: 10px 20px; text-decoration: none; }
 a.box.hover { background: #FFF; color: #000; }
 
-div.pic { float: left; margin: 1px; }
-a img { border: 2px solid #FFF; }
-a:visited img { border-color: #EEE; }
-a img.hover { border-color: #000; }
+.pic { float: left; padding: 5px; }
+.pic a img { border: 5px solid #FFF; display: block; }
+.pic a:visited img { border-color: #EEE; }
+.pic a img.hover { border-color: #000; }
 
 #fancybox-outer { background-color: #000; }
 #fancybox-title { font-family: inherit; font-size: 30px; text-shadow: #000 2px 2px 1px; }
